# runtime-scope-analyzer-string

./: CMakeLists.txt  main.cpp  vcpkg.json
benchmarks/: CMakeLists.txt  scope_analyzer.cpp
lib/: CMakeLists.txt  ScopeAnalyzer.cpp
lib/AnalyzerTypes/: BraceAnalyzer.cpp  IndentationAnalyzer.cpp
lib/Analyzers/: BraceAnalyzer.cpp  IndentationAnalyzer.cpp  JavaAnalyzer.cpp
lib/include/ScopeAnalyzer/: IndentationScopeContext.h  ScopeAnalyzer.h  ScopeContext.h  StartContext.h
lib/include/ScopeAnalyzer/AnalyzerTypes/: BraceAnalyzer.h  IAnalyzer.h  IndentationAnalyzer.h
lib/include/ScopeAnalyzer/Analyzers/: BraceAnalyzer.h  IAnalyzer.h  IndentationAnalyzer.h  JavaAnalyzer.h
lib/include/ScopeAnalyzer/Results/: AddTokenResult.h
src/: Analyzer.cpp  CMakeLists.txt  ScopeAnalyzer.cpp
src/AnalyzerTypes/: BaseAnalyzer.cpp  BraceAnalyzer.cpp  CMakeLists.txt  IndentationAnalyzer.cpp
src/Analyzers/: CMakeLists.txt  CSharpAnalyzer.cpp  GoAnalyzer.cpp  GroovyAnalyzer.cpp  JavaAnalyzer.cpp  JavascriptAnalyzer.cpp  JsonAnalyzer.cpp  KotlinAnalyzer.cpp  ObjectiveCAnalyzer.cpp  PythonAnalyzer.cpp  ScalaAnalyzer.cpp  SwiftAnalyzer.cpp
src/Analyzers/include/Analyzers/: CSharpAnalyzer.h  GoAnalyzer.h  GroovyAnalyzer.h  JavaAnalyzer.h  JavascriptAnalyzer.h  JsonAnalyzer.h  KotlinAnalyzer.h  ObjectiveCAnalyzer.h  PythonAnalyzer.h  ScalaAnalyzer.h  SwiftAnalyzer.h
src/ConstructionHandlers/: CMakeLists.txt  QuoteHandler.cpp
src/Constructions/: CMakeLists.txt  ConstructionsConverter.cpp  ConstructionsStreamExtractor.cpp
src/Constructions/include/Constructions/: Construction.h  ConstructionState.h  ConstructionStreamExtractorState.h  ConstructionType.h  ConstructionTypes.h  ConstructionWithPosition.h  ConstructionsConverter.h  ConstructionsStreamExtractor.h  GetResult.h
src/Constructions/include/Tokens/: TokenMetadata.h
src/ConstructionsStreamExtractor/: CMakeLists.txt  ConstructionsStreamExtractor.cpp
src/Contexts/: CMakeLists.txt
src/Handlers/: CMakeLists.txt  HandlersList.cpp  HandlersMap.cpp  IHandler.cpp
src/Handlers/Types/: BacktickHandler.cpp  BraceHandler.cpp  CharacterQuoteHandler.cpp  DollarSlashyStringHandler.cpp  IndentationEndHandler.cpp  IndentationHandler.cpp  LongCommentHandler.cpp  ShortCommentHandler.cpp  SpaceIndentationHandler.cpp  StringQuoteHandler.cpp  TabIndentationHandler.cpp  ThreeDoubleQuoteHandler.cpp  ThreeQuoteHandler.cpp
src/Handlers/include/Handlers/: HandleResult.h  HandlersList.h  HandlersMap.h  IHandler.h  IHandlerList.h  TryAddConstructionResult.h
src/Handlers/include/Handlers/Results/: HandleResult.h
src/Handlers/include/Handlers/Types/: BacktickHandler.h  BraceHandler.h  CharacterQuoteHandler.h  DollarSlashyStringHandler.h  IndentationEndHandler.h  IndentationHandler.h  LongCommentHandler.h  ShortCommentHandler.h  SpaceIndentationHandler.h  StringQuoteHandler.h  TabIndentationHandler.h  ThreeDoubleQuoteHandler.h  ThreeQuoteHandler.h
src/HandlersMap/: CMakeLists.txt  HandlersMap.cpp
(+31 files in other folders)
